# django-activity-audit

./: .gitignore  .pre-commit-config.yaml  MANIFEST.in  Makefile  README.md  README.rst  hatch  manage.py  pyproject.toml  pytest.ini
activity_audit/: __init__.py  apps.py  formatters.py  handlers.py  middleware.py  protocols.py  settings.py  signals.py  utils.py
audit_logging/: __init__.py  apps.py  handlers.py  protocols.py  settings.py  signals.py  utils.py
django-activity-audit/: utils.py
django_activity_audit/: __init__.py  apps.py  formatters.py  handlers.py  middleware.py  protocols.py  settings.py  signals.py  utils.py
docs/: django-activity-audit.md  user-activity-feed-plan.md
easy_audit_logging/: __init__.py  apps.py  formatters.py  middleware.py  protocols.py  settings.py  utils.py
easy_logging/: __init__.py  signals.py
tests/: README.md  conftest.py  requirements.txt  test_audit.py  test_settings.py  urls.py
tests/publications/: admin.py  apps.py  models.py  serializers.py  views.py
tests/vector/: Dockerfile  test-docker.sh  vector.yaml
