[project]
name = "django-activity-audit"
version = "1.0.1"
description = "A Django package for easy CRUD operation logging and container logs"
authors = [
    { name = "Shreeshan", email = "shreeshan256@gmail.com" }
]
readme = "README.md"
license = { text = "MIT" }
keywords = ["logging", "audit", "django", "utilities"]

classifiers = [
    "Environment :: Plugins",
    "Framework :: Django :: 4.2",
    "Framework :: Django :: 5.0",
    "Framework :: Django",
    "Intended Audience :: Developers",
    "License :: OSI Approved :: MIT License",
    "Operating System :: OS Independent",
    "Programming Language :: Python :: 3 :: Only",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.8",
    "Programming Language :: Python :: 3.9",
    "Programming Language :: Python :: 3.10",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
    "Topic :: Software Development :: Libraries :: Python Modules",
]


requires-python = ">=3.8"
dependencies = [
  "django>=4.2,<6.0",
]

[project.urls]
Homepage = "https://github.com/shree256/django-activity-audit"
Repository = "https://github.com/shree256/django-activity-audit"
Documentation = "https://github.com/shree256/django-activity-audit"

[project.optional-dependencies]
dev = [
  "pre-commit~=3.5; python_version<'3.9'",
  "pre-commit>=3.5; python_version>='3.9'",
  "ruff>=0.1.11",
]

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.ruff]
line-length = 88
select = []
show-fixes = true
target-version = "py38"

[tool.ruff.lint.flake8-pytest-style]
fixture-parentheses = false
mark-parentheses = false

[tool.ruff.per-file-ignores]
"**/test_*.py" = ["PLR2004", "S101", "S106"]
